<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食分享</string>
    <string name="search_title">搜索关键字</string>
    <string name="nonetwork_title">网络无法连接</string>
    <string name="nonetwork_msg">请确认已开启WLAN或开启数据访问功能,且网络信号良好</string>
    <string name="setnetwork">设置网络</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="no_awake">以后不再提醒</string>
    <string name="increase_accuracy_title">提高 \"我的位置\"的精确度</string>
    <string name="increase_accuracy_body">目前并未开启所有位置源，为了最快，最精确地检测位置，请执行以下操作:\n%s </string>
    <string name="skip">跳过</string>
    <string name="set">设置</string>
    <string name="myloc">我的位置</string>
    <string name="foodlist">美食列表</string>
    <string name="thisweek">最近一周</string>
    <string name="lastweek">一周前</string>
    <string name="lastmonth">一月前</string>
    <string name="remark">评论</string>
    <string name="name">名称</string>
    <string name="address">地址</string>
    <string name="price">价格</string>
    <string name="rating">好评度(星越多表示越好)</string>
    <string name="quitconfirm">确定要退出吗</string>
    <string name="share">分享</string>
    <string name="sharing">分享中...</string>
    <!-- sina share message -->
    <string name="OAUTH_ERROR">服务器验证失败</string>
    <string name="OAUTH_RequestToken_ACCESS">第三方应用验证成功</string>
    <string name="OAUTH_RequestToken_ERROR">第三方应用验证失败</string>
    <string name="OAUTH_AccessToken_ACCESS">用户授权登录成功</string>
    <string name="OAUTH_AccessToken_ERROR">用户授权登录失败</string>
    <string name="OAUTH_AccessToken_SXPIRED">授权已过期，请重新授权登录</string>
    <string name="Weibo_Message_NULL">分享数据不能为空</string>
    <string name="Weibo_Message_LONG">已超出140个字</string>
    <string name="Weibo_Share_Success">微博分享成功</string>
    <string name="Weibo_Share_Error">微博分享失败</string>
    <string name="Weibo_Share_Repeat">已经分享过了</string>
    <string name="tel">电话</string>
    <string name="type">类别</string>
    
    
   <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
 
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>

</resources>