<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
  <com.hobom.mobile.widgets.CommonTitleView
      android:id="@+id/header"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      />
   <include
        android:id="@+id/search_box"
        layout="@layout/search_box" />
   <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#ff9b9c9b" >

                <ImageView
                    android:id="@+id/ivRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#ff9b9c9b"
                    android:padding="5dp"
                    android:text="@string/foodlist"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/sort" />
            </RelativeLayout>

            <TextView
                android:id="@+id/thisweek_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="5dip"
                android:text="@string/thisweek"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/thisweek_list_empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="You have no foodlist at this time."
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.hobom.mobile.widgets.MyListView
                android:id="@+id/thisweek_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:minHeight="100dp" >
            </com.hobom.mobile.widgets.MyListView>

            <TextView
                android:id="@+id/lastweek_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/lastweek"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/lastweek_list_empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="You have no foodlist at this time."
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.hobom.mobile.widgets.MyListView
                android:id="@+id/lastweek_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:minHeight="100dp" >
            </com.hobom.mobile.widgets.MyListView>

            <TextView
                android:id="@+id/lastmonth_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/lastmonth"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/lastmonth_list_empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="You have no foodlist at this time."
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.hobom.mobile.widgets.MyListView
                android:id="@+id/lastmonth_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:minHeight="100dp" >
            </com.hobom.mobile.widgets.MyListView>
        </LinearLayout>
    </ScrollView>   
    </LinearLayout>